# url_shortener

./: .gitignore  README.md  db.sqlite3  pyproject.toml
core/: settings.py  urls.py
url_shortener/: models.py  rate_limiter.py  serializer.py  views.py
url_shortener/migrations/: 0001_initial.py  0002_passwordresettoken.py
